kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-app
  namespace: employee-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-app

  template:
    metadata:
      labels:
        app: employee-app

    spec:

      serviceAccountName: employee-app-sa

      containers:

      - name: employee-app

        image: 383189130218.dkr.ecr.us-east-1.amazonaws.com/employee-app:dbcfaef7287bf1a78edc4c122040168ec7de9fe8

        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

            volumeMounts:
            - name: secrets-store
            csi:
              driver: secrets-store.csi.k8s.io
              readOnly: true
              volumeAttributes:
                secretProviderClass: aws-secrets
