kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-app
  namespace: employee-app

spec:

  selector:
    app: employee-app

  ports:

  - port: 80
    targetPort: 5000

  type: ClusterIP
