kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: employee-app-network-policy
  
spec:
  podSelector:
    matchLabels:
      app: employee-app

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector: {}
